==============================================

New in this Isabelle version
----------------------------

*** General ***

* Document antiquotation @{url} produces markup for the given URL,
which results in an active hyperlink within the text.

* Document antiquotation @{file_unchecked} is like @{file}, but does
not check existence within the file-system.


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Auxiliary files ('ML_file' etc.) are managed by the Prover IDE.
Open text buffers take precedence over copies within the file-system.

* Document panel: simplied interaction where every single mouse click
(re)opens document via desktop environment or as jEdit buffer.


*** HOL ***

* Code generations are provided for make, fields, extend and truncate
operations on records.

* Qualified constant names Wellfounded.acc, Wellfounded.accp.
INCOMPATIBILITY.

* Fact generalization and consolidation:
    neq_one_mod_two, mod_2_not_eq_zero_eq_one_int ~> not_mod_2_eq_0_eq_1
INCOMPATIBILITY.

* Purely algebraic definition of even.  Fact generalization and consolidation:
    nat_even_iff_2_dvd, int_even_iff_2_dvd ~> even_iff_2_dvd
    even_zero_(nat|int) ~> even_zero
INCOMPATIBILITY.

* Abolished neg_numeral.
  * Canonical representation for minus one is "- 1".
  * Canonical representation for other negative numbers is "- (numeral _)".
  * When devising rule sets for number calculation, consider the
    following canonical cases: 0, 1, numeral _, - 1, - numeral _.
  * HOLogic.dest_number also recognizes numerals in non-canonical forms
    like "numeral One", "- numeral One", "- 0" and even "- … - _".
  * Syntax for negative numerals is mere input syntax.
INCOMPATBILITY.

* Elimination of fact duplicates:
    equals_zero_I ~> minus_unique
    diff_eq_0_iff_eq ~> right_minus_eq
    nat_infinite ~> infinite_UNIV_nat
    int_infinite ~> infinite_UNIV_int
INCOMPATIBILITY.

* Fact name consolidation:
    diff_def, diff_minus, ab_diff_minus ~> diff_conv_add_uminus